# sensor_banya

./: .dockerignore  .env.example  .gitignore  README.md  TODO.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/: metric.py  router.py  user.py
backend/src/config/: settings.py
backend/src/db/: db.py  metric.py  user.py
backend/src/db/ddl/: metrics.sql  users.sql
backend/src/mqtt/: mqtt.py
backend/src/ws/: ws.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Dashboard.jsx  Login.jsx  index.css
