[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.5.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "ruff>=0.15.20",
    "uvicorn[standard]>=0.49.0",
]
